No longer truncates arguments in sidekiq-web, instead uses overflow: scroll to let you see them.

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -845,3 +845,7 @@ img.smallogo {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 3px;
 }
+.args {
+  overflow: scroll;
+  max-height: 100px;
+}
